--- a/web/src/app/components/live-chat/live-chat.html
+++ b/web/src/app/components/live-chat/live-chat.html
@@ -1,7 +1,7 @@
-<hs-sub-menu>
-  <hs-sub-menu-title>Live Chat</hs-sub-menu-title>
+<hls-sub-menu>
+  <hls-sub-menu-title>Live Chat</hls-sub-menu-title>
 
-  <hs-sub-menu-extra>
+  <hls-sub-menu-extra>
     <span
       class="time-unit"
       role="button"
@@ -11,8 +11,8 @@
     >
       {{formatTimeUnit(u)}}
     </span>
-  </hs-sub-menu-extra>
-</hs-sub-menu>
+  </hls-sub-menu-extra>
+</hls-sub-menu>
 
 <div class="live-chat-chart" (dblclick)="jumpTo($event)">
   <svg class="axis" [attr.width]="960" [attr.height]="height + topMargin">
