--- a/web/src/app/components/paid-chat-chart/paid-chat-chart.html
+++ b/web/src/app/components/paid-chat-chart/paid-chat-chart.html
@@ -1,8 +1,8 @@
-<hs-sub-menu>
-  <hs-sub-menu-title>Paid Live Chat</hs-sub-menu-title>
+<hls-sub-menu>
+  <hls-sub-menu-title>Paid Live Chat</hls-sub-menu-title>
 
-  <hs-sub-menu-extra> </hs-sub-menu-extra>
-</hs-sub-menu>
+  <hls-sub-menu-extra> </hls-sub-menu-extra>
+</hls-sub-menu>
 
 <div class="paid-chat-chart">
   <div class="caption">{{ sum | number }} items - sum</div>
