--- a/web/src/app/components/stream-stats-chart/stream-stats-chart.html
+++ b/web/src/app/components/stream-stats-chart/stream-stats-chart.html
@@ -1,9 +1,9 @@
-<hs-sub-menu>
-  <hs-sub-menu-title>
+<hls-sub-menu>
+  <hls-sub-menu-title>
     <span i18n="@@streamViewers">Stream Viewers</span>
-  </hs-sub-menu-title>
+  </hls-sub-menu-title>
 
-  <hs-sub-menu-extra>
+  <hls-sub-menu-extra>
     <span
       class="time-unit"
       role="button"
@@ -13,8 +13,8 @@
     >
       {{formatTimeUnit(u)}}
     </span>
-  </hs-sub-menu-extra>
-</hs-sub-menu>
+  </hls-sub-menu-extra>
+</hls-sub-menu>
 
 <div class="stream-stats-chart" (dblclick)="jumpTo($event)">
   <svg class="axis" [attr.width]="960" [attr.height]="height + topMargin">
