--- a/web/src/app/components/stream-summary/stream-summary-shimmer.html
+++ b/web/src/app/components/stream-summary/stream-summary-shimmer.html
@@ -14,9 +14,9 @@
       <span class="name shimmer text" [style.width.px]="100"></span>
     </div>
 
-    <hs-number-row *ngFor="let x of [1, 2]">
-      <hs-big-number-shimmer></hs-big-number-shimmer>
-      <hs-big-number-shimmer></hs-big-number-shimmer>
-    </hs-number-row>
+    <hls-number-row *ngFor="let x of [1, 2]">
+      <hls-big-number-shimmer></hls-big-number-shimmer>
+      <hls-big-number-shimmer></hls-big-number-shimmer>
+    </hls-number-row>
   </div>
 </div>
