--- a/web/src/app/components/stream-time/stream-time.html
+++ b/web/src/app/components/stream-time/stream-time.html
@@ -1,7 +1,7 @@
 <div class="stream-time">
-  <hs-sub-menu>
-    <hs-sub-menu-title i18n="@@streamTimes"> Stream Times </hs-sub-menu-title>
-  </hs-sub-menu>
+  <hls-sub-menu>
+    <hls-sub-menu-title i18n="@@streamTimes"> Stream Times </hls-sub-menu-title>
+  </hls-sub-menu>
 
   <div class="stream-time-chart" cdkScrollable>
     <svg
