--- a/web/src/app/components/sub-menu/sub-menu.html
+++ b/web/src/app/components/sub-menu/sub-menu.html
@@ -1,3 +1,3 @@
-<ng-content select="hs-sub-menu-title"></ng-content>
+<ng-content select="hls-sub-menu-title"></ng-content>
 <span class="spacer"></span>
-<ng-content select="hs-sub-menu-extra"></ng-content>
+<ng-content select="hls-sub-menu-extra"></ng-content>
