--- a/web/src/app/components/stream-stats-chart/stream-stats-chart.html
+++ b/web/src/app/components/stream-stats-chart/stream-stats-chart.html
@@ -18,7 +18,7 @@
 
 <div class="stream-stats-chart" (dblclick)="jumpTo($event)">
   <svg class="axis" [attr.width]="960" [attr.height]="height + topMargin">
-    <ng-container *ngFor="let value of yScale.ticks(6)">
+    <ng-container *ngFor="let value of yTicks">
       <line
         class="line"
         [attr.x1]="0"
@@ -46,6 +46,16 @@
       (hold)="tryOpenTooltip($event)"
       (release)="closeTooltip()"
     >
+      <ng-container *ngFor="let value of yTicks">
+        <line
+          class="line"
+          [attr.x1]="0"
+          [attr.y1]="yScale(value)"
+          [attr.x2]="'100%'"
+          [attr.y2]="yScale(value)"
+        ></line>
+      </ng-container>
+
       <defs>
         <linearGradient id="gradient" x1="0" y1="0" x2="0" y2="1">
           <stop stop-opacity="0.38" stop-color="#ea4335" offset="0"></stop>
@@ -62,7 +72,7 @@
         fill="none"
       ></path>
 
-      <ng-container *ngFor="let tick of ticks">
+      <ng-container *ngFor="let tick of xTicks">
         <line
           class="line"
           [attr.x1]="xScale(rows[tick][0])"
@@ -89,6 +99,9 @@
         [attr.y1]="0"
         [attr.x2]="xScale(rows[dataPointIdx]?.[0] || 0)"
         [attr.y2]="yScale(0)"
+        stroke-dasharray="1.5, 6"
+        stroke-linecap="round"
+        stroke-width="2"
       ></line>
 
       <circle
