chore(web): add policy privacy

--- a/web/src/app/layout/sidenav/sidenav.html
+++ b/web/src/app/layout/sidenav/sidenav.html
@@ -70,6 +70,10 @@
     </div>
 
     <div class="row">
+      <a class="link" [routerLink]="['/privacy-policy']"> Privacy policy </a>
+    </div>
+
+    <div class="row">
       <a class="link" href="https://angular.io/" target="_blank">
         Angular: v{{ angularVer }}
       </a>
