feat(web): introduce Helmet component

--- a/web/src/app/pages/bilibili-channel/bilibili-channel.html
+++ b/web/src/app/pages/bilibili-channel/bilibili-channel.html
@@ -1,3 +1,5 @@
+<hls-helmet i18n-title="@@bilibiliChannel" title="bilibiliChannel"></hls-helmet>
+
 <div class="table-sub-menu">
   <hls-sub-menu>
     <hls-sub-menu-title>
