--- a/web/src/app/pages/privacy-policy/privacy-policy.html
+++ b/web/src/app/pages/privacy-policy/privacy-policy.html
@@ -1,3 +1,5 @@
+<hls-helmet title="Privacy policy"></hls-helmet>
+
 <div class="mat-typography privacy-policy mx-auto max-w-960">
   <h1>Privacy Policy</h1>
 
