--- a/web/src/app/pages/settings/settings.html
+++ b/web/src/app/pages/settings/settings.html
@@ -1,3 +1,5 @@
+<hls-helmet i18n-title="@@settings" title="Settings"></hls-helmet>
+
 <div class="settings mx-auto max-w-960">
   <h4 class="title">
     <ng-container i18n="@@vtuberSelected">VTuber Selected</ng-container>
