--- a/web/src/app/pages/vtubers-detail/vtubers-detail.html
+++ b/web/src/app/pages/vtubers-detail/vtubers-detail.html
@@ -1,3 +1,5 @@
+<hls-helmet [title]="vtuber?.id | name"></hls-helmet>
+
 <div class="mx-auto max-w-960">
   <hls-channel-stats [vtuber]="vtuber"> </hls-channel-stats>
 
