--- a/web/src/app/pages/youtube-schedule-stream/youtube-schedule-stream.html
+++ b/web/src/app/pages/youtube-schedule-stream/youtube-schedule-stream.html
@@ -1,3 +1,8 @@
+<hls-helmet
+  i18n-title="@@youtubeSchedule"
+  title="YouTube Schedule Stream"
+></hls-helmet>
+
 <div class="youtube-schedule-stream" *ngIf="data$ | async as list">
   <hls-sub-menu>
     <hls-sub-menu-title>
