--- a/web/src/app/pages/youtube-stream/youtube-stream.html
+++ b/web/src/app/pages/youtube-stream/youtube-stream.html
@@ -1,3 +1,5 @@
+<hls-helmet i18n-title="@@youtubeStream" title="YouTube Stream"></hls-helmet>
+
 <div class="youtube-stream" *ngIf="data$ | async as list">
   <hls-sub-menu>
     <hls-sub-menu-title>
