--- a/web/src/app/pages/youtube-channel/youtube-channel.html
+++ b/web/src/app/pages/youtube-channel/youtube-channel.html
@@ -1,3 +1,5 @@
+<hls-helmet i18n-title="@@youtubeChannel" title="YouTube Channel"></hls-helmet>
+
 <div class="table-sub-menu">
   <hls-sub-menu>
     <hls-sub-menu-title>
