Revert "feat(web): cfImages pipe"
This reverts commit 81bc2b0f313bb134da07f829aa03141f6b61f586.

--- a/web/src/app/components/channel-table/channel-table.html
+++ b/web/src/app/components/channel-table/channel-table.html
@@ -13,7 +13,7 @@
     <td mat-cell *matCellDef="let row">
       <img
         class="profile"
-        [src]="row.vtuberId | image | cfImages:'88x88'"
+        [cfImage]="[row.vtuberId | image, 'thumbnail']"
         [routerLink]="['/vtuber', row.vtuberId]"
       />
     </td>
