--- a/web/src/app/components/channel-stats/channel-stats.html
+++ b/web/src/app/components/channel-stats/channel-stats.html
@@ -1,6 +1,6 @@
 <div class="vtuber-summary">
   <div class="info">
-    <img class="profile" [src]="vtuber.image | cfImages:'240x240'" />
+    <img class="profile" [cfImage]="[vtuber.image, 'profile']" />
   </div>
 
   <div class="meta">
