--- a/web/src/app/components/stream-item/_stream-item-theme.scss
+++ b/web/src/app/components/stream-item/_stream-item-theme.scss
@@ -12,7 +12,7 @@
   );
 
   .stream-item {
-    .viewers {
+    .statistics {
       color: mat.get-color-from-palette($foreground, "secondary-text");
     }
 
@@ -47,7 +47,7 @@
     }
 
     .meta,
-    .viewers {
+    .statistics {
       font-size: mat.font-size($config, "caption");
       font-weight: mat.font-weight($config, "body-1");
     }
