--- a/web/src/app/pages/streams-detail/stream-stats-chart/stream-stats-chart.html
+++ b/web/src/app/pages/streams-detail/stream-stats-chart/stream-stats-chart.html
@@ -1,6 +1,6 @@
 <hls-sub-menu>
   <hls-sub-menu-title>
-    <span i18n="@@streamViewers">Stream Viewers</span>
+    <span>{{ name | titlecase }}</span>
   </hls-sub-menu-title>
 
   <hls-sub-menu-extra>
@@ -84,25 +84,26 @@
         </text>
       </ng-container>
 
-      <line
-        class="guideline"
-        fill="none"
-        [attr.x1]="xScale(rows[dataPointIdx]?.[0] || 0)"
-        [attr.y1]="0"
-        [attr.x2]="xScale(rows[dataPointIdx]?.[0] || 0)"
-        [attr.y2]="yScale(0)"
-        stroke-dasharray="1.5, 6"
-        stroke-linecap="round"
-        stroke-width="2"
-      ></line>
+      <ng-container *ngIf="0 <= dataPointIdx && dataPointIdx < rows.length">
+        <line
+          class="guideline"
+          fill="none"
+          [attr.x1]="xScale(rows[dataPointIdx][0])"
+          [attr.y1]="0"
+          [attr.x2]="xScale(rows[dataPointIdx][0])"
+          [attr.y2]="yScale(0)"
+          stroke-dasharray="1.5, 6"
+          stroke-linecap="round"
+          stroke-width="2"
+        ></line>
 
-      <circle
-        #point
-        [attr.r]="dataPointSize"
-        [attr.cx]="xScale(rows[dataPointIdx]?.[0] || 0)"
-        [attr.cy]="yScale(rows[dataPointIdx]?.[1] || 0)"
-        fill="#ea4335"
-      ></circle>
+        <circle
+          [attr.r]="dataPointSize"
+          [attr.cx]="xScale(rows[dataPointIdx][0])"
+          [attr.cy]="yScale(rows[dataPointIdx][1])"
+          fill="#ea4335"
+        ></circle>
+      </ng-container>
     </svg>
   </div>
 </div>
@@ -121,7 +122,7 @@
 >
   <div class="arrow" #arrow></div>
   <div>{{ rows[dataPointIdx][0] | date:'yyyy/MM/dd HH:mm:ss' }}</div>
-  <div>Stream viewers: {{ rows[dataPointIdx][1] | number }}</div>
+  <div>{{ name | titlecase }}: {{ rows[dataPointIdx][1] | number }}</div>
   <div *ngIf="stream.status === 'ended'" class="hint">
     Double click to jump to
   </div>
