feat(web): timezone settings

--- a/web/src/app/components/date-filter/date-filter.html
+++ b/web/src/app/components/date-filter/date-filter.html
@@ -5,7 +5,7 @@
   cdkOverlayOrigin
   #trigger="cdkOverlayOrigin"
 >
-  {{ getBtnText() }}
+  {{ text }}
 
   <div *ngIf="!_range.start && !_range.end" class="date-filter-arrow"></div>
 </button>
