--- a/web/src/app/pages/settings/settings.html
+++ b/web/src/app/pages/settings/settings.html
@@ -1,6 +1,8 @@
 <hls-helmet i18n-title="@@settings" title="Settings"></hls-helmet>
 
 <div class="settings mx-auto max-w-960">
+  <hls-timezone-settings></hls-timezone-settings>
+
   <hls-youtube-settings></hls-youtube-settings>
 
   <mat-divider></mat-divider>
