--- a/web/src/app/pages/streams-detail/stream-stats-chart/stream-stats-chart.html
+++ b/web/src/app/pages/streams-detail/stream-stats-chart/stream-stats-chart.html
@@ -11,7 +11,7 @@
       [ngClass]="{ selected: unit === u }"
       (click)="unit = u; _render()"
     >
-      {{formatTimeUnit(u)}}
+      {{ u | formatUnit }}
     </span>
   </hls-sub-menu-extra>
 </hls-sub-menu>
